Inserção de busca

--- a/app/views/produtos/busca.html.erb
+++ b/app/views/produtos/busca.html.erb
@@ -8,7 +8,7 @@
         </tr>
     </thead>
     <tbody>
-      <% @produtos_por_nome.each do |produto| %>
+      <% @produtos.each do |produto| %>
         <tr>
             <td><%= produto.nome %></td>
             <td><%= produto.descricao %></td>
@@ -19,26 +19,3 @@
         <% end %>
     </tbody>
 </table>
-
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Descrição</th>
-            <th>Preço</th>
-            <th>Quantidade</th>
-        </tr>
-    </thead>
-    <tbody>
-      <% @produtos_por_preco.each do |produto| %>
-        <tr>
-            <td><%= produto.nome %></td>
-            <td><%= produto.descricao %></td>
-            <td><%= produto.preco %></td>
-            <td><%= produto.quantidade %></td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
-
-<%= link_to "Criar novo produto", new_produto_path %>
