Preparando template homepage e bootstrap

--- a/app/views/layouts/adminoffice.html.erb
+++ b/app/views/layouts/adminoffice.html.erb
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EscamboApp</title>
+    <title>LojaEP3</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'adminoffice', media: 'all', 'data-turbolinks-track': 'reload' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'adminoffice', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
