--- a/app/views/site/home/index.html.erb
+++ b/app/views/site/home/index.html.erb
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Start Bootstrap</a>
+    <a class="navbar-brand" href="#">Login</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -35,9 +35,15 @@
 
       <h1 class="my-4">ShopEP3</h1>
       <div class="list-group">
-        <a href="#" class="list-group-item">Categoria 1</a>
-        <a href="#" class="list-group-item">Categoria 2</a>
-        <a href="#" class="list-group-item">Categoria 3</a>
+        <a href="#" class="list-group-item">Tecnologia</a>
+        <a href="#" class="list-group-item">Acessórios para Veículos</a>
+        <a href="#" class="list-group-item">Beleza e Cuidado Pessoal</a>
+        <a href="#" class="list-group-item">Esport e Lazer</a>
+        <a href="#" class="list-group-item">Casa e Eletrodomésticos</a>
+        <a href="#" class="list-group-item">Ferramentas e Indústrias</a>
+        <a href="#" class="list-group-item">Joias e Relógios</a>
+        <a href="#" class="list-group-item">Livros</a>
+        <a href="#" class="list-group-item">Imóveis</a>
       </div>
 
     </div>
@@ -53,13 +59,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+            <img class="d-block img-fluid" src="http://www.liltfilms.com/wp-content/uploads/2012/11/cropped-home-office-macbookair-apple-brand-notebook-computer-top-uhd-4k-wallpapers-2880x1800-900x350.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+            <img class="d-block img-fluid" src="http://mobiles4u.com/image/cache/catalog/blog/4-900x350.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+            <img class="d-block img-fluid" src="https://zeedup.com/wp-content/uploads/2016/12/amar-5-900x350.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -76,13 +82,13 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="https://mundotestosterona.com/wp-content/uploads/2018/04/Rolex-700x400.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item One</a>
+                <a href="#">Relógio Rolex</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>$49.000</h5>
+              <p class="card-text">Relógio de mergulho ultrarresistente concebido pela Rolex para uso em grandes profundidades</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -92,13 +98,13 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="http://www.speedcredit.com.sg/wp-content/uploads/2014/07/used-bmw-320i-for-sale-exterior-1-700x400.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Two</a>
+                <a href="#">BMW 320i - 2008</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+              <h5>$45.000</h5>
+              <p class="card-text">Carro de garagem e particular, bancos elétricos</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -108,13 +114,13 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="http://gestaosul.com.br/wp-content/uploads/2016/09/polo3.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Three</a>
+                <a href="#">Camisa branca Hering </a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>$29,90</h5>
+              <p class="card-text">A camisa polo branca é mais clássica e fácil de combinar. Para fazer um estilo mais minimalista, arrisque em um jeans escuro.</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -124,13 +130,13 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="https://google-y2iiuwcftaxfilvpz.netdna-ssl.com/wp-content/uploads/2018/06/Xiaomi-Mi-Band-3-official-image-8-700x400.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Four</a>
+                <a href="#">Xiaomi Mi Band 3</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>$134,90</h5>
+              <p class="card-text">5 ATM Resistência de Água Monitor de Frequência Cardíaca Bluetooth 4.2</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -140,13 +146,13 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="https://www.comofazer.net/wp-content/uploads/2017/11/base-700x400.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Five</a>
+                <a href="#">Base MAC</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+              <h5>$75,90</h5>
+              <p class="card-text">Cobertura translúcida, acabamento natural e hidratante</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -156,13 +162,13 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="#"><img class="card-img-top" src="http://elrincondechina.com/wp-content/uploads/2018/05/huawei-p20-pro-camara-40mpx-128g-D_NQ_NP_948563-MPE27290870931_052018-F-700x400.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Item Six</a>
+                <a href="#">Huawei P20 Pro</a>
               </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+              <h5>$5.485,95</h5>
+              <p class="card-text">Smartphone IP67 À Prova D' Água Vista Traseira Câmeras Full Tela NFC Android 8.1 crepúsculo</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
