Redirecionamento para tela de login

--- a/app/views/site/home/index.html.erb
+++ b/app/views/site/home/index.html.erb
@@ -1,14 +1,14 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Login</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="users/sign_in">Login</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" formaction="/users/sessions/in.html.erb/">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" href="/admins/sign_in">Admin
             <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Serviços</a>
+          <a class="nav-link" href="/produtos/index">Produtos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contato</a>
@@ -35,15 +35,15 @@
 
       <h1 class="my-4">ShopEP3</h1>
       <div class="list-group">
-        <a href="#" class="list-group-item">Tecnologia</a>
-        <a href="#" class="list-group-item">Acessórios para Veículos</a>
-        <a href="#" class="list-group-item">Beleza e Cuidado Pessoal</a>
-        <a href="#" class="list-group-item">Esport e Lazer</a>
-        <a href="#" class="list-group-item">Casa e Eletrodomésticos</a>
-        <a href="#" class="list-group-item">Ferramentas e Indústrias</a>
-        <a href="#" class="list-group-item">Joias e Relógios</a>
-        <a href="#" class="list-group-item">Livros</a>
-        <a href="#" class="list-group-item">Imóveis</a>
+        <a href="/departamentos/new" class="list-group-item">Tecnologia</a>
+        <a href="/departamentos/new" class="list-group-item">Acessórios para Veículos</a>
+        <a href="/departamentos/new" class="list-group-item">Beleza e Cuidado Pessoal</a>
+        <a href="/departamentos/new" class="list-group-item">Esport e Lazer</a>
+        <a href="/departamentos/new" class="list-group-item">Casa e Eletrodomésticos</a>
+        <a href="/departamentos/new" class="list-group-item">Ferramentas e Indústrias</a>
+        <a href="/departamentos/new" class="list-group-item">Joias e Relógios</a>
+        <a href="/departamentos/new" class="list-group-item">Livros</a>
+        <a href="/departamentos/new" class="list-group-item">Imóveis</a>
       </div>
 
     </div>
